--- a/main.html
+++ b/main.html
@@ -1,16 +1,92 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Asian Paints Grid</title>
+  <style>
+    #grid-container {
+      display: grid;
+      grid-template-columns: repeat(3, 100px);
+      grid-gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    .grid-item {
+      width: 100px;
+      height: 100px;
+      border: 1px solid #000;
+      background-color: transparent;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      font-size: 24px;
+    }
+
+    #controls {
+      margin-top: 10px;
+    }
+
+    input {
+      margin-right: 10px;
+      padding: 5px;
+    }
+
+    button {
+      padding: 5px 10px;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+  <div id="grid-container">
+    <!-- 9 grid items -->
+    <div class="grid-item" id="1">1</div>
+    <div class="grid-item" id="2">2</div>
+    <div class="grid-item" id="3">3</div>
+    <div class="grid-item" id="4">4</div>
+    <div class="grid-item" id="5">5</div>
+    <div class="grid-item" id="6">6</div>
+    <div class="grid-item" id="7">7</div>
+    <div class="grid-item" id="8">8</div>
+    <div class="grid-item" id="9">9</div>
+  </div>
+
+  <div id="controls">
+    <input type="text" id="block_id" placeholder="Enter block id (1-9)" />
+    <input type="text" id="colour_id" placeholder="Enter color (e.g. red)" />
+    <button id="change_button">Change Color</button>
+    <button id="Reset">Reset</button>
+  </div>
+
+  <script>
+    const changeButton = document.getElementById("change_button");
+    const resetButton = document.getElementById("Reset");
+
+    changeButton.addEventListener("click", () => {
+      const blockId = document.getElementById("block_id").value;
+      const color = document.getElementById("colour_id").value;
+
+      // Reset all grid items to transparent
+      for (let i = 1; i <= 9; i++) {
+        document.getElementById(i.toString()).style.backgroundColor = "transparent";
+      }
+
+      // Change background of selected block
+      const selectedBlock = document.getElementById(blockId);
+      if (selectedBlock) {
+        selectedBlock.style.backgroundColor = color;
+      } else {
+        alert("Invalid block ID");
+      }
+    });
+
+    resetButton.addEventListener("click", () => {
+      for (let i = 1; i <= 9; i++) {
+        document.getElementById(i.toString()).style.backgroundColor = "transparent";
+      }
+    });
+  </script>
 </body>
-
 </html>
