--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
 </head>
 <body>
 
-  <div id="grid-container">
+  <div id="grid-container" class="grid-container">
     <!-- 9 grid items -->
     <div class="grid-item" id="1">1</div>
     <div class="grid-item" id="2">2</div>
@@ -56,13 +56,13 @@
   <div id="controls">
     <input type="text" id="block_id" placeholder="Enter block id (1-9)" />
     <input type="text" id="colour_id" placeholder="Enter color (e.g. red)" />
-    <button id="change_button">Change Color</button>
-    <button id="Reset">Reset</button>
+    <button id="change_button">Change</button>
+    <button id="reset_button">Reset</button>
   </div>
 
   <script>
     const changeButton = document.getElementById("change_button");
-    const resetButton = document.getElementById("Reset");
+    const resetButton = document.getElementById("reset_button");
 
     changeButton.addEventListener("click", () => {
       const blockId = document.getElementById("block_id").value;
@@ -73,12 +73,12 @@
         document.getElementById(i.toString()).style.backgroundColor = "transparent";
       }
 
-      // Change background of selected block
-      const selectedBlock = document.getElementById(blockId);
-      if (selectedBlock) {
-        selectedBlock.style.backgroundColor = color;
+      // Change background of selected block if valid
+      const blockIdNum = parseInt(blockId);
+      if (blockIdNum >= 1 && blockIdNum <= 9) {
+        document.getElementById(blockId).style.backgroundColor = color;
       } else {
-        alert("Invalid block ID");
+        alert("Invalid block ID. Please enter a number between 1 and 9.");
       }
     });
 
